# composr

./: .env.example  README.md  drizzle.config.ts  middleware.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: command-palette.tsx
drizzle/: 0000_same_shriek.sql  0001_square_marauders.sql  0002_tricky_wrecker.sql  0003_chubby_patch.sql  0004_silky_la_nuit.sql  0005_add_assembly_id.sql  0006_brave_rafael_vega.sql  0007_block_roles_and_composition_enhancements.sql  0007_charming_norman_osborn.sql  0008_marvelous_the_leader.sql  0009_simple_chimera.sql
lib/: audit.ts  auth-sdk.test.ts  auth-sdk.ts  config-cache.ts  config-events.ts  db.ts  diff.test.ts  diff.ts  encryption.test.ts  encryption.ts  ensure-team.ts  eval-runner.test.ts  eval-runner.ts  expression-parser.test.ts  expression-parser.ts  graph-engine.test.ts  graph-engine.ts  hash.test.ts  hash.ts  model-costs.ts  rate-limit.ts  schema.ts  statistics.test.ts  statistics.ts  template-engine.test.ts  template-engine.ts  usage.ts  webhooks.test.ts  webhooks.ts
sdk-go/: README.md  compose.go  compose_test.go  composr.go  composr_test.go  expression.go  expression_test.go  go.mod  hash.go  hash_test.go  promptkit.go  promptkit_test.go  sanitize.go  template.go  template_test.go  types.go
sdk/python/: pyproject.toml
sdk/python/composr/: __init__.py  client.py  compose.py  expression_parser.py  hash.py  types.py
sdk/python/composr_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: test_compose.py  test_expression.py  test_hash.py
(+129 files in other folders)
